--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@phosphor-icons/vue": "^2.2.1",
     "pinia": "^3.0.3",
     "sass": "^1.91.0",
     "vue": "^3.5.18",
