--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-VITE_HACKER_NEWS_URL = 'https://hacker-news.firebaseio.com/v0/item'
+VITE_HACKER_NEWS_URL = 'https://hacker-news.firebaseio.com/v0/'
