refactor: split project into frontend and backend

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hacker-news-spa",
+  "name": "frontend",
   "author": {
     "name": "Sergey Dultsev",
     "github": "https://github.com/SergeyDultsev",
