--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,20 +2,22 @@ services:
   backend:
     build: ./backend
     container_name: backend
-    restart: always
+    restart: unless-stopped
     ports:
       - '3000:3000'
     env_file:
       - ./backend/.env
     volumes:
-      - ./backend:/usr/src/app
+      - ./backend:/usr/src/app:cached
       - /usr/src/app/node_modules
+    environment:
+      - CHOKIDAR_USEPOLLING=true
     depends_on:
       - db
       - redis
     networks:
       - HN
-    command: npm run start
+    command: npm run start:dev
 
   frontend:
     build: ./frontend
@@ -37,14 +39,10 @@ services:
     restart: always
     env_file:
       - ./.env
-    environment:
-      - POSTGRES_USER=${POSTGRES_USER}
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-      - POSTGRES_DB=${POSTGRES_DB}
     ports:
       - '5432:5432'
     volumes:
-      - db_data:/var/lib/postgresql/data
+      - db_data:/var/lib/postgresql
     networks:
       - HN
 
