--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -29,9 +29,13 @@ services:
     volumes:
       - ./frontend:/app
       - /app/node_modules
+    environment:
+      - CHOKIDAR_USEPOLLING=true
+      - VITE_WATCH_POLLING=true
     networks:
       - HN
-    command: npm run dev
+    stdin_open: true
+    tty: true
 
   db:
     image: postgres:latest
