feat: update configs

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -11,23 +11,23 @@
     "isolatedModules": true,
     "skipLibCheck": true,
 
-    "baseUrl": "..",
+    "baseUrl": "./",
     "paths": {
       "@/*": ["src/*"],
-      "@app/*": ["app/*"],
-      "@assets/*": ["assets/*"],
-      "@entities/*": ["entities/*"],
-      "@features/*": ["features/*"],
-      "@pages/*": ["pages/*"],
-      "@shared/*": ["shared/*"],
-      "@widgets/*": ["widgets/*"]
+      "@app/*": ["src/app/*"],
+      "@assets/*": ["src/assets/*"],
+      "@entities/*": ["src/entities/*"],
+      "@features/*": ["src/features/*"],
+      "@pages/*": ["src/pages/*"],
+      "@shared/*": ["src/shared/*"],
+      "@widgets/*": ["src/widgets/*"]
     },
 
-    "types": ["vite/client"]
+    "types": ["vite/client", "node"]
   },
   "include": [
-    "frontend/src/**/*.ts",
-    "frontend/src/**/*.d.ts",
-    "frontend/src/**/*.vue"
+    "src/**/*.ts",
+    "src/**/*.d.ts",
+    "src/**/*.vue"
   ]
 }
