--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
   },
   "devDependencies": {
     "@types/node": "^24.3.0",
+    "@typescript-eslint/eslint-plugin": "^8.46.4",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/eslint-config-typescript": "^14.6.0",
     "eslint": "^9.39.1",
@@ -35,6 +36,7 @@
     "typescript": "^5.9.2",
     "vite": "^7.0.6",
     "vite-plugin-vue-devtools": "^8.0.0",
+    "vue-eslint-parser": "^10.2.0",
     "vue-tsc": "^3.0.6"
   }
 }
