--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,9 @@
   "license": "MIT",
   "scripts": {
     "build": "nest build",
+    "migration:generate": "npm run build && npx typeorm -d dist/data-source.js migration:generate",
+    "migration:run": "npx typeorm -d -dist/data-source.js migarion:run",
+    "migartion": "npx typeorm -d dist/data-source.js migration:create",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "ts-node-dev --respawn --transpile-only src/main.ts",
