--- a/backend/package.json
+++ b/backend/package.json
@@ -8,8 +8,8 @@
   "license": "MIT",
   "scripts": {
     "build": "nest build",
-    "migration:generate": "npm run build && npx typeorm -d dist/data-source.js migration:generate",
-    "migration:run": "npx typeorm -d -dist/data-source.js migarion:run",
+    "migration:generate": "typeorm-ts-node-commonjs -d src/data-source.ts migration:generate src/migrations/init",
+    "migration:run": "typeorm-ts-node-commonjs -d src/data-source.ts migration:run",
     "migartion": "npx typeorm -d dist/data-source.js migration:create",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
